# jutro-ner

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  project.yml  pyproject.toml  requirements.txt
configs/: base.cfg  config.cfg  config_trf.cfg  ents.cfg  extend.cfg  sweep_config.cfg
scripts/: convert.py  create_config.py  functions.py  generate_config.py  import_dataset.py  rel_model.py  rel_pipe.py  sweep.yml  sweeps_using_config.py  visualize_model.py
utils/: functions.py
